# django-api-framework

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: publish.yml  test.yml  test_full.yml
docs/: conf.py  howto.rst  index.rst  make.bat
easy/: __init__.py  apps.py  decorators.py  exception.py  main.py  response.py  utils.py
easy/conf/: settings.py
easy/controller/: admin_auto_api.py  auto_api.py  base.py  meta.py  meta_conf.py
easy/domain/: __init__.py  base.py  meta.py  orm.py  serializers.py
easy/permissions/: __init__.py  adminsite.py  base.py  superuser.py
easy/renderer/: json.py
easy/services/: __init__.py  base.py  crud.py  permission.py
easy/testing/: __init__.py  client.py
tests/: conftest.py  test_api_base_response.py  test_async_api_permissions.py  test_async_auto_crud_apis.py  test_async_other_apis.py  test_auto_api_creation.py  test_doc_decorator.py  test_exceptions.py  test_settings.py
tests/config/: settings.py
tests/demo_app/: apis.py  apps.py  auth.py  conftest.py  controllers.py  domain.py  factories.py  models.py  schema.py  services.py  test_async_api_permissions.py  test_async_auto_crud_apis.py  test_async_crud_admin_apis.py  test_async_crud_apis.py  test_async_other_apis.py  test_auto_admin_api.py  test_auto_api_creation.py  test_exceptions.py  test_settings.py  urls.py
tests/demo_app/tests/: test_api_base_response.py  test_async_api_permissions.py  test_async_crud_admin_apis.py  test_async_crud_apis.py  test_permissions.py
tests/easy_app/: apis.py  apps.py  controllers.py  domain.py  factories.py  models.py  services.py  urls.py
