[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "easy"
dist-name = "django-api-framework"
author = "Freemind Core"
author-email = "freemindcore@icloud.com"
home-page = "https://github.com/freemindcore/django-api-framework"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

requires = [
    "Django >= 3.1",
    "django-ninja-extra >= 0.15.0",
]
description-file = "README.md"
requires-python = ">=3.6"


[tool.flit.metadata.urls]
Documentation = "https://github.com/freemindcore/django-api-framework"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-asyncio",
    "black",
    "isort",
    "injector == 0.19.0",
    "flake8",
    "mypy==0.931",
    "django-stubs",
    "factory-boy==3.2.1",
    "django_coverage_plugin",
    "django-ninja-extra >= 0.15.0",
    "django-ninja-jwt",
    "Django >= 3.1",
]
dev = [
    "autoflake",
    "pre_commit",
    "bumpversion==0.6.0",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=7.1.9,<8.0.0",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "markdown-include"
]
